--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,7 @@ jobs:
           --platform linux/amd64,linux/arm64 .
           docker buildx build --push \
           --tag ghcr.io/${OWNER_LC}/grott:alpine \
-          --platform linux/amd64,linux/arm64 --file Dockerfile-alpine .
+          --platform linux/amd64,linux/arm64, --file Dockerfile-alpine .
+          docker buildx build --push \
+          --tag ghcr.io/${OWNER_LC}/grott:alpine32 \
+          --platform linux/arm/v7 --file Dockerfile-alpine-arm32 .
